# R-Type

./: .clang-format  .gitignore  ATH_8hpp.html  ATH_8hpp.js  ATH_8hpp__dep__incl.map  ATH_8hpp__dep__incl.md5  ATH_8hpp__incl.map  ATH_8hpp__incl.md5  ATH_8hpp_source.html  Allies_8hpp.html  Allies_8hpp.js  Allies_8hpp__dep__incl.map  Allies_8hpp__dep__incl.md5  Allies_8hpp_source.html  AnimationSystem_8hpp.html  AnimationSystem_8hpp.js  AnimationSystem_8hpp__dep__incl.map  AnimationSystem_8hpp__dep__incl.md5  AnimationSystem_8hpp__incl.map  AnimationSystem_8hpp__incl.md5  AnimationSystem_8hpp_source.html  Animation_8hpp.html  Animation_8hpp.js  Animation_8hpp__dep__incl.map  Animation_8hpp__dep__incl.md5  Animation_8hpp_source.html  AsteroideSystem_8hpp.html  AsteroideSystem_8hpp.js  AsteroideSystem_8hpp__dep__incl.map  AsteroideSystem_8hpp__dep__incl.md5  AsteroideSystem_8hpp__incl.map  AsteroideSystem_8hpp__incl.md5  AsteroideSystem_8hpp_source.html  Background_8hpp.html  Background_8hpp.js  Background_8hpp__dep__incl.map  Background_8hpp__dep__incl.md5  Background_8hpp__incl.map  Background_8hpp__incl.md5  Background_8hpp_source.html  (+1438 more)
ECS/: CMakeLists.txt  ECS.cpp  ECS.hpp  Main.cpp  UDP_Manager.cpp  UDP_Manager.hpp
client/: CMakeLists.txt
documentation/: CMakeDocumentation.md  Diagram_class.md  Documentation_frameworks_bibliotheques_utilises.md  (+2 more)
ecs/: CMakeLists.txt  ECS.cpp  ECS.hpp  EcsExceptions.hpp  Enums_ecs.hpp  Includes.hpp  Includes_ecs.hpp  SparseArray.cpp  SparseArray.hpp  Structures.hpp  Structures_ecs.hpp
ecs/components/: Direction.cpp  Direction.hpp  Displayable.hpp  Entity.cpp  Entity.hpp  Health.hpp  Hitbox.hpp  Playable.cpp  Playable.hpp  Position.cpp  Position.hpp  Velocity.cpp  Velocity.hpp
ecs/system/: CollisionSystem.hpp  PositionSystem.hpp
ecs/udp/: MessageCompressor.cpp  MessageCompressor.hpp  UDP_Client.cpp  UDP_Client.hpp  UDP_Manager.cpp  UDP_Manager.hpp  UDP_Server.cpp  UDP_Server.hpp
game_poc/client/: CMakeLists.txt  Client.cpp  Client.hpp  Client_Create_And_Kill.cpp  Client_Event_Bus.cpp  Client_Init.cpp  Client_Send_Message.cpp  Client_Systems.cpp  Main.cpp  SFMLHandler.cpp  SFMLHandler.hpp  SpriteFactory.hpp
game_poc/client/components/: Displayable.hpp  Music.hpp  Shader.hpp  Sprite.hpp  TempDisplay.hpp  Window.hpp
game_poc/client/system/: ATH.hpp  EventWindow.hpp  Filter.hpp  MusicSystem.hpp  PlayerSystem.hpp  RenderWindow.hpp  UpdateEntitySystem.hpp
game_poc/config/: CMakeLists.txt  udp_config.conf
game_poc/server/: CMakeLists.txt  HitboxFactory.hpp  Main.cpp  PipeFactory.hpp  RandomNumber.hpp  Room.cpp  Room.hpp  Room_Create_And_Destroy.cpp  Room_Event_Bus.cpp  Room_Game_Loop.cpp  Room_Send_Message.cpp  Room_Systems.cpp  Server.cpp  Server.hpp
game_poc/server/components/: Allies.hpp  Ennemies.hpp  Hitbox.hpp  SpriteId.hpp
game_poc/server/system/: BoundariesSystem.hpp  CollisionSystem.hpp  ScoreSystem.hpp
game_poc/shared/: CMakeLists.txt  Enums.hpp  EventBus.hpp  Includes.hpp  Main.cpp  PocExceptions.hpp  SecretKeyChecker.hpp  Timer.cpp  Timer.hpp  Utils.cpp  Utils.hpp
game_poc/shared/components/: Health.hpp  Levels.hpp
game_poc/shared/system/: DirectionSystem.hpp  GravitySystem.hpp  KillSystem.hpp  PositionSystem.hpp  VelocitySystem.hpp
rtype_game/: CMakeLists.txt
rtype_game/client/: CMakeLists.txt  Client.cpp  Client.hpp  Client_Create_And_Kill.cpp  Client_Event_Bus.cpp  Client_Event_Sfml.cpp  Client_Init.cpp  Client_Send_Message.cpp  Client_Systems.cpp  Command_checker.cpp  Command_checker.hpp  KeyBinding.cpp  KeyBinding.hpp  Main.cpp  Menu.hpp  SFMLHandler.cpp  SFMLHandler.hpp  SpriteFactory.hpp  inputManager.hpp
rtype_game/client/components/: Animation.hpp  Background.hpp  Displayable.hpp  LevelStatus.hpp  Life.hpp  Music.hpp  Shader.hpp  Sprite.hpp  TempDisplay.hpp  Text.hpp  Window.hpp
rtype_game/client/menu/: Button.hpp  InputScreen.cpp  InputScreen.hpp  Menu.cpp  Menu.hpp  RoomHandling.hpp  Settings.cpp  Settings.hpp  Settings_Events.cpp  Settings_Utils.cpp  TextInput.cpp  TextInput.hpp  menu.cpp  menu.hpp
rtype_game/client/system/: ATH.hpp  AnimationSystem.hpp  EventWindow.hpp  Filter.hpp  HomeScreen.cpp  HomeScreen.hpp  Menu.cpp  Menu.hpp  MusicSystem.hpp  PlayerSystem.hpp  RenderWindow.hpp  ScoreSystem.hpp  SetFilter.hpp  UpdateEntitySystem.hpp  menuSystem.cpp  menuSystem.hpp
rtype_game/config/: CMakeLists.txt  Enums.hpp  client_config.conf  gameplay_config.conf  generateSecretKey.py  getIpAddress.py  server_config.conf  udp_config.conf
rtype_game/server/: CMakeLists.txt  Enums.hpp  GameplayFactory.hpp  HitboxFactory.hpp  Includes.hpp  Main.cpp  MessageChecker.cpp  MessageChecker.hpp  MonsterFactory.hpp  RandomNumber.hpp  Room.cpp  Room.hpp  Room_Create_And_Kill.cpp  Room_Event_Bus.cpp  Room_Game_Loop.cpp  Room_Init.cpp  Room_Send_Message.cpp  Room_System.cpp  Server.cpp  Server.hpp  Server_Create_And_Join_Room.cpp  Server_Create_Join_Room.cpp
rtype_game/server/components/: Allies.hpp  Bonus.hpp  Damage.hpp  Ennemies.hpp  Hitbox.hpp  Monster.hpp  PowerUp.hpp  Projectiles.hpp  SpriteId.hpp
rtype_game/server/system/: AsteroideSystem.hpp  BonusSystem.hpp  BoundariesSystem.hpp  CollisionSystem.hpp  HealthSystem.hpp  LevelSystem.hpp  MonsterMovementSystem.hpp  ScoreSystem.hpp  ShootingSystem.hpp
rtype_game/shared/: CMakeLists.txt  Enums.hpp  EventBus.hpp  GameplayFactory.hpp  GameplayFactory_Bonuses.cpp  GameplayFactory_Init.cpp  GameplayFactory_Player_And_Monster.cpp  GameplayFactory_Projectiles_And_Levels.cpp  Includes.hpp  MessageChecker.cpp  MessageChecker.hpp  RTypeExceptions.hpp  Room.hpp  SecretKeyChecker.hpp  SpriteFactory.hpp  Timer.cpp  Timer.hpp  Utils.cpp  Utils.hpp
rtype_game/shared/components/: Health.hpp  Hitbox.hpp  Levels.hpp
rtype_game/shared/system/: BonusSystem.hpp  DirectionSystem.hpp  KillSystem.hpp  PositionSystem.hpp
rtype_game/test_unitaire/: CMakeLists.txt  connexion_tests.hpp  ecs_tests.hpp  tests.cpp
rtype_game/test_unitaire/files_tests/: config_file.config  config_with_no_ip.config  config_with_no_secret_key.config  config_with_wrong_buffer_size.config
(+157 files in other folders)
